--- a/sass/_newsletter.scss
+++ b/sass/_newsletter.scss
@@ -37,6 +37,7 @@
   &-form {
     background: #FFFFFF;
     border-radius: 26.5px;
+    margin: 0 auto;
   }
   &-input {
     outline: none;
@@ -82,6 +83,24 @@
     .btn-sub {
       font-size: 12px;
       padding: 10px;
+    }
+  }
+  @media screen and (max-width: 479.98px) {
+    &-form {
+      max-width: 300px;
+    }
+    &-input {
+      max-width: unset;
+      width: 200px;
+    }
+  }
+  @media screen and (max-width: 479.98px) {
+    &-form {
+      max-width: 290px;
+    }
+    &-input {
+      max-width: unset;
+      width: 180px;
     }
   }
   
